bottom Nav spacing fix

--- a/style.css
+++ b/style.css
@@ -282,7 +282,7 @@ header {
     text-transform: uppercase;
     font-size: 1rem;
     line-height: 0.9rem;
-    /* padding-inline-start: 2rem; */
+    /* padding-inline-/start: 2rem; */
     margin: 1rem 0 0 0;
     color: var(--col-5);
 }
@@ -980,7 +980,7 @@ input[type="radio"] {
         font-size: 1rem;
         line-height: 2rem;
         /* padding-inline-start: 2rem; */
-        margin: 1rem 0 0 0;
+        margin: 1rem 1rem 1rem 0;
         color: var(--col-5);
     }
 
